updated endpoint to return updated onject
